Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8026478

-XX:+VerifyAdapterSharing is broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P4
    • 9
    • hs25
    • hotspot
    • None
    • 8
    • b02
    • generic
    • generic

    Backports

      Description

        This flag is broken. The reason is that adapters (gen_i2c_adapter()) that are generated during VM startup do not include the range for StubRoutines::code2() if -XX:+VerifyAdapterCalls is specified. StubRoutines::code2() is only allocated later during startup; consequently, code2() is NULL. As a result, the size of the generated adapter as well as the code itself does not mactch.

        Attachments

          Issue Links

            Activity

              People

                anoll Albert Noll (Inactive)
                anoll Albert Noll (Inactive)
                Votes:
                0 Vote for this issue
                Watchers:
                4 Start watching this issue

                Dates

                  Created:
                  Updated:
                  Resolved: