8026478: -XX:+VerifyAdapterSharing is broken

Fix by considering all checks in StubRoutines

Reviewed-by: kvn, twisti